lldpd (0.3)

  * Initial support of LLDP-MED (inventory part)
  * Fix for bridge detection (don't send bridge ioctl on random interfaces)
  * Don't send anything on inactive slaves (this confuses most switches)

 -- Vincent Bernat <bernat@luffy.cx>

lldpd (0.2.1)

  * Fix a syntax error in manual page
  * Fix open() calls

 -- Vincent Bernat <bernat@luffy.cx>

lldpd (0.2)

  * Add privilege separation
  * Add FDP support
  * Support CDP encapsulated into native VLAN
  * Various fixes

 -- Vincent Bernat <bernat@luffy.cx>

lldpd (0.1)

  * Initial release

 -- Vincent Bernat <bernat@luffy.cx>
