@@ -338,6 +338,7 @@ int	 iface_is_bond_slave(struct lldpd *,
     const char *, const char *, int *);
 int	 iface_is_enslaved(struct lldpd *, const char *);
 int	 iface_is_slave_active(struct lldpd *, int, const char *);
+void	 iface_get_permanent_mac(struct lldpd *, struct lldpd_hardware *);
 #ifdef ENABLE_LLDPMED
 char	*dmi_hw();
 char	*dmi_fw();
